--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,13 @@ Name=X500::DN::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 0.81]
+Date=2015-01-18T10:19:00
+Comments= <<EOT
+- Add docs for X500::DN::Marpa::Actions.
+- Update scripts/pod2html.sh to match.
+EOT
+
 [V 0.80]
 Date=2015-01-13T17:59:00
 Comments=- Original version
