Fix t/dn.t to avoid an uninit warning for the deliberate error case

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,13 @@ Name=X500::DN::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 0.82]
+Date=2015-11-17T20:42:31
+Comments= <<EOT
+- Fix t/dn.t to avoid an uninit warning for the deliberate error case.
+- Remove Build.PL.
+EOT
+
 [V 0.81]
 Date=2015-01-18T10:19:00
 Comments= <<EOT
