Start pushing tags

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,13 +1,14 @@
 [Module]
 Name=X500::DN::Marpa
-Changelog.Creator=Module::Metadata::Changes V 2.05
-Changelog.Parser=Config::IniFiles V 2.83
+Changelog.Creator=Module::Metadata::Changes V 2.06
+Changelog.Parser=Config::IniFiles V 2.88
 
 [V 1.00]
 Date=2015-11-17T20:42:31
 Comments= <<EOT
 - Fix t/dn.t to avoid an uninit warning for the deliberate error case.
 - Remove Build.PL.
+- Start pushing tags to repo.
 EOT
 
 [V 0.81]
